--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
+html{
+  line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
+
+*, *:before, *:after {box-sizing: inherit}
+
+.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
+
+/* GENERAL STYLES */
+
+@import url ('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
+
 .App {
+  font-size: 125%;
+  letter-spacing: 0.2rem;
+}
+
+.wrapper {
+  width: 85%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+h1, p {
+  margin: 0;
+  padding: 0;
+}
+
+/* HEADER STYLES */
+
+header {
+  background-color: rgb(99, 3, 99);
+  height: 40vh;
+}
+
+h1 {
+  font-family: 'Ephesis', cursive;
+  font-size: 6rem;
+  color: rgb(253, 243, 230);
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 40vh;
+}
+
+/* MAIN STYLES */
+
+main {
+  background-color: rgb(177, 177, 177);
+}
+
+form {
+  font-family: 'Ephesis', cursive;
+  font-size: 2rem;
+  color: rgb(34, 34, 34);
+  font-weight: bold;
+  padding: 75px 0;
+}
+
+label {
+  margin: 10px 25px;
+}
+
+input[type=date],
+input[type=time] {
+  display: block;
+  background-color: rgb(177, 177, 177);;
+  border: none;
+  margin: 5px 25px;
+}
+
+textarea {
+  display: block;
+  background-color: rgb(253, 243, 230);
+  border-radius: 5px;
+  border: none;
+  margin: 15px 25px;
+  resize: none;
+}
+
+.dateContainer,
+.timeContainer {
+  display: flex;
+}
+
+::placeholder {
+  font-family: 'Ephesis', cursive;
+  padding: 10px;
+}
+
+/* FOOTER STYLES */
+
+footer {
+  background-color: rgb(34, 34, 34);
+}
+
+footer p {
+  color: rgb(253, 243, 230);
+  padding: 25px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer p a {
+  color: rgb(253, 243, 230);
 }
