--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ main {
 
 form {
   font-family: cursive;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: rgb(34, 34, 34);
   font-weight: bold;
   padding: 75px 0;
@@ -88,7 +88,6 @@ textarea {
   margin: 15px 25px;
   padding: 20px;
   resize: none;
-  font-size: 1.5rem;
   width: 100%;
   height: 200px;
 }
@@ -96,6 +95,7 @@ textarea {
 .dateContainer,
 .timeContainer {
   display: flex;
+  width: 100%;
 }
 
 ::placeholder {
@@ -155,4 +155,52 @@ footer p {
 
 footer p a {
   color: rgb(253, 243, 230);
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 778px) {
+  h1 {
+    font-size: 4rem;
+  }
+
+  .flexWrapper {
+    flex-direction: column;
+  }
+
+  form {
+    width: 100%;
+  }
+
+  input[type=date],
+  input[type=time],
+  textarea {
+    margin: 0;
+  }
+  .dateContainer,
+  .timeContainer {
+    width: 50%;
+  }
+
+  .inputContainer {
+    margin-top: 0;
+    width: 100%;
+  }
+}
+
+@media (max-width: 440px) {
+  .log {
+    width: 100%;
+    margin: 25px 0 0 0;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  form {
+    font-size: 1.25rem;
+  }
+
+  footer p {
+    font-size: 1rem;
+  }
 }
